# clean-code-workshop-cpp

./: .clang-format  .gitignore  .vsconfig  CMakeLists.txt  README.md  SmellyShapes.sln
GoogleTestProject/: CircleTest.cpp  ColorTest.cpp  GoogleTestProject.vcxproj  GoogleTestProject.vcxproj.filters  RectangleTest.cpp  ShapeGroupTest.cpp  SquareTest.cpp  gtest-all.cc  gtest.h  main.cpp
SmellyShapes/: ClassDiagram.cd  SmellyShapes.cpp  SmellyShapes.vcxproj  SmellyShapes.vcxproj.filters
SmellyShapes/Source/: Circle.cpp  Color.cpp  DrawingBoard.cpp  Rectangle.cpp  Shape.cpp  ShapeGroup.cpp  Square.cpp
SmellyShapes/include/: Circle.h  Color.h  ComplexShape.h  DrawingBoard.h  Point.h  Rectangle.h  Shape.h  ShapeGroup.h  SimpleShape.h  Square.h
